clean up + unification
git-svn-id: https://svn.apache.org/repos/asf/cocoon/trunk@27545 13f79535-47bb-0310-9956-ffa450edef68